main.css
body {
  margin: 0;
/*  background-color: #000;*/
}
h1 {
  text-align: center;
  font-size: 50px;
}

#game {
  position: relative;
  width: 600px;
  margin: 0 auto; 
}


#board {
  position: relative;
  margin: 0 auto;
  width: 468px;
  height: 468px;
  padding: 0px;
  border: 4px solid black;
  
}
#square1 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square2 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square3 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square4 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square5 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square6 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square7 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square8 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}
#square9 {
  float: left;
  width: 150px;
  height: 150px;
  background-color: black;
  text-align: center;
  border: 3px solid white;
}

/*.pMove {
  position:absolute;
  height:90%;  = 100% - 2*5% padding 
  width:90%; /* = 100% - 2*5% padding */
/*  padding: 10% 5%*/
  


/*.table{
    display:table;
    height:100%;
    width:100%;
}*/
.cellStyle{
  color: white;
  font-size: 100px;
}
#cell2{
   color: white;
}
#cell3{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}
#cell4{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}
#cell5{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}
#cell6{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}
#cell7{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}
#cell8{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}
#cell9{
    display:table-cell;
    vertical-align:middle;
    height:100%;
    width:100%;
    color: white;
    text-align: center;
    font-size: 100px;
    font-style: 
}

button {
  float: left;
  margin-left: 260px;
  margin-bottom: 200px;
  display: inline-block;
  font-size: 25px;
}

